--- a/config/fastcraft.ini
+++ b/config/fastcraft.ini
@@ -1,5 +1,5 @@
 ; FastCraft config
-; created May 9, 2015 10:19:57 PM
+; created May 10, 2015 8:57:35 AM
 ;---
 
 ; Settings purely affecting performance, but not gameplay.
