--- a/config/AppliedEnergistics2/Facades.cfg
+++ b/config/AppliedEnergistics2/Facades.cfg
@@ -5687,7 +5687,6 @@ gardentrees {
     B:thinlog.12499=false
     B:thinlog.1269=false
     B:thinlog.12699=false
-    B:thinlog.1270=false
     B:thinlog.12701=false
     B:thinlog.12715=false
     B:thinlog.12716=false
@@ -5708,17 +5707,10 @@ gardentrees {
     B:thinlog.12854=false
     B:thinlog.12855=false
     B:thinlog.12856=false
-    B:thinlog.1286=false
     B:thinlog.12873=false
     B:thinlog.12883=false
     B:thinlog.12909=false
     B:thinlog.12919=false
-    B:thinlog.13114=false
-    B:thinlog.13150=false
-    B:thinlog.13258=false
-    B:thinlog.13259=false
-    B:thinlog.13260=false
-    B:thinlog.13261=false
     B:thinlog.13376=false
     B:thinlog.13382=false
     B:thinlog.13386=false
@@ -5745,16 +5737,13 @@ gardentrees {
     B:thinlog.13532=false
     B:thinlog.13536=false
     B:thinlog.13557=false
-    B:thinlog.13558=false
     B:thinlog.13573=false
-    B:thinlog.13574=false
     B:thinlog.169=false
     B:thinlog.176=false
     B:thinlog.182=false
     B:thinlog.193=false
     B:thinlog.2=false
     B:thinlog.211=false
-    B:thinlog.246=false
     B:thinlog.3=false
     B:thinlog.4=false
     B:thinlog.411=false
@@ -5770,7 +5759,6 @@ gardentrees {
     B:thinlog.4289=false
     B:thinlog.429=false
     B:thinlog.4307=false
-    B:thinlog.4342=false
     B:thinlog.435=false
     B:thinlog.437=false
     B:thinlog.4507=false
@@ -5823,15 +5811,7 @@ gardentrees {
     B:thinlog.4881=false
     B:thinlog.4883=false
     B:thinlog.4885=false
-    B:thinlog.4922=false
-    B:thinlog.4923=false
-    B:thinlog.4940=false
-    B:thinlog.4958=false
     B:thinlog.5=false
-    B:thinlog.5066=false
-    B:thinlog.5067=false
-    B:thinlog.5068=false
-    B:thinlog.5069=false
     B:thinlog.5184=false
     B:thinlog.5190=false
     B:thinlog.5194=false
@@ -5858,9 +5838,7 @@ gardentrees {
     B:thinlog.5340=false
     B:thinlog.5344=false
     B:thinlog.5365=false
-    B:thinlog.5366=false
     B:thinlog.5381=false
-    B:thinlog.5382=false
     B:thinlog.561=false
     B:thinlog.562=false
     B:thinlog.563=false
@@ -5886,7 +5864,6 @@ gardentrees {
     B:thinlog.62040=false
     B:thinlog.62050=false
     B:thinlog.621=false
-    B:thinlog.62281=false
     B:thinlog.631=false
     B:thinlog.761=false
     B:thinlog.767=false
@@ -5895,16 +5872,11 @@ gardentrees {
     B:thinlog.785=false
     B:thinlog.787=false
     B:thinlog.789=false
-    B:thinlog.826=false
-    B:thinlog.827=false
-    B:thinlog.833=false
     B:thinlog.8361=false
     B:thinlog.8403=false
-    B:thinlog.844=false
     B:thinlog.8603=false
     B:thinlog.8605=false
     B:thinlog.8619=false
-    B:thinlog.862=false
     B:thinlog.8620=false
     B:thinlog.8645=false
     B:thinlog.8647=false
@@ -5926,12 +5898,6 @@ gardentrees {
     B:thinlog.8787=false
     B:thinlog.8813=false
     B:thinlog.8823=false
-    B:thinlog.9018=false
-    B:thinlog.9054=false
-    B:thinlog.9162=false
-    B:thinlog.9163=false
-    B:thinlog.9164=false
-    B:thinlog.9165=false
     B:thinlog.9280=false
     B:thinlog.9286=false
     B:thinlog.9290=false
@@ -5958,13 +5924,7 @@ gardentrees {
     B:thinlog.9436=false
     B:thinlog.9440=false
     B:thinlog.9461=false
-    B:thinlog.9462=false
     B:thinlog.9477=false
-    B:thinlog.9478=false
-    B:thinlog.970=false
-    B:thinlog.971=false
-    B:thinlog.972=false
-    B:thinlog.973=false
     B:thinlogfence=false
     B:thinlogfence.1=false
     B:thinlogfence.1088=false
@@ -5996,7 +5956,6 @@ gardentrees {
     B:thinlogfence.12499=false
     B:thinlogfence.1269=false
     B:thinlogfence.12699=false
-    B:thinlogfence.1270=false
     B:thinlogfence.12701=false
     B:thinlogfence.12715=false
     B:thinlogfence.12716=false
@@ -6017,17 +5976,10 @@ gardentrees {
     B:thinlogfence.12854=false
     B:thinlogfence.12855=false
     B:thinlogfence.12856=false
-    B:thinlogfence.1286=false
     B:thinlogfence.12873=false
     B:thinlogfence.12883=false
     B:thinlogfence.12909=false
     B:thinlogfence.12919=false
-    B:thinlogfence.13114=false
-    B:thinlogfence.13150=false
-    B:thinlogfence.13258=false
-    B:thinlogfence.13259=false
-    B:thinlogfence.13260=false
-    B:thinlogfence.13261=false
     B:thinlogfence.13376=false
     B:thinlogfence.13382=false
     B:thinlogfence.13386=false
@@ -6054,16 +6006,13 @@ gardentrees {
     B:thinlogfence.13532=false
     B:thinlogfence.13536=false
     B:thinlogfence.13557=false
-    B:thinlogfence.13558=false
     B:thinlogfence.13573=false
-    B:thinlogfence.13574=false
     B:thinlogfence.169=false
     B:thinlogfence.176=false
     B:thinlogfence.182=false
     B:thinlogfence.193=false
     B:thinlogfence.2=false
     B:thinlogfence.211=false
-    B:thinlogfence.246=false
     B:thinlogfence.3=false
     B:thinlogfence.4=false
     B:thinlogfence.411=false
@@ -6079,7 +6028,6 @@ gardentrees {
     B:thinlogfence.4289=false
     B:thinlogfence.429=false
     B:thinlogfence.4307=false
-    B:thinlogfence.4342=false
     B:thinlogfence.435=false
     B:thinlogfence.437=false
     B:thinlogfence.4507=false
@@ -6132,15 +6080,7 @@ gardentrees {
     B:thinlogfence.4881=false
     B:thinlogfence.4883=false
     B:thinlogfence.4885=false
-    B:thinlogfence.4922=false
-    B:thinlogfence.4923=false
-    B:thinlogfence.4940=false
-    B:thinlogfence.4958=false
     B:thinlogfence.5=false
-    B:thinlogfence.5066=false
-    B:thinlogfence.5067=false
-    B:thinlogfence.5068=false
-    B:thinlogfence.5069=false
     B:thinlogfence.5184=false
     B:thinlogfence.5190=false
     B:thinlogfence.5194=false
@@ -6167,9 +6107,7 @@ gardentrees {
     B:thinlogfence.5340=false
     B:thinlogfence.5344=false
     B:thinlogfence.5365=false
-    B:thinlogfence.5366=false
     B:thinlogfence.5381=false
-    B:thinlogfence.5382=false
     B:thinlogfence.561=false
     B:thinlogfence.562=false
     B:thinlogfence.563=false
@@ -6195,7 +6133,6 @@ gardentrees {
     B:thinlogfence.62040=false
     B:thinlogfence.62050=false
     B:thinlogfence.621=false
-    B:thinlogfence.62281=false
     B:thinlogfence.631=false
     B:thinlogfence.761=false
     B:thinlogfence.767=false
@@ -6204,16 +6141,11 @@ gardentrees {
     B:thinlogfence.785=false
     B:thinlogfence.787=false
     B:thinlogfence.789=false
-    B:thinlogfence.826=false
-    B:thinlogfence.827=false
-    B:thinlogfence.833=false
     B:thinlogfence.8361=false
     B:thinlogfence.8403=false
-    B:thinlogfence.844=false
     B:thinlogfence.8603=false
     B:thinlogfence.8605=false
     B:thinlogfence.8619=false
-    B:thinlogfence.862=false
     B:thinlogfence.8620=false
     B:thinlogfence.8645=false
     B:thinlogfence.8647=false
@@ -6235,12 +6167,6 @@ gardentrees {
     B:thinlogfence.8787=false
     B:thinlogfence.8813=false
     B:thinlogfence.8823=false
-    B:thinlogfence.9018=false
-    B:thinlogfence.9054=false
-    B:thinlogfence.9162=false
-    B:thinlogfence.9163=false
-    B:thinlogfence.9164=false
-    B:thinlogfence.9165=false
     B:thinlogfence.9280=false
     B:thinlogfence.9286=false
     B:thinlogfence.9290=false
@@ -6267,13 +6193,7 @@ gardentrees {
     B:thinlogfence.9436=false
     B:thinlogfence.9440=false
     B:thinlogfence.9461=false
-    B:thinlogfence.9462=false
     B:thinlogfence.9477=false
-    B:thinlogfence.9478=false
-    B:thinlogfence.970=false
-    B:thinlogfence.971=false
-    B:thinlogfence.972=false
-    B:thinlogfence.973=false
 }
 
 
@@ -6656,14 +6576,20 @@ magicalcrops {
     B:magicalcropsAccioFarmland=false
     B:magicalcropsAccioFurnace=false
     B:magicalcropsAccioFurnaceActive=false
+    B:magicalcropsAirCrop=false
     B:magicalcropsAluminiumCrop=false
     B:magicalcropsAlumiteCrop=false
     B:magicalcropsArditeCrop=false
+    B:magicalcropsBlazeCrop=false
     B:magicalcropsBlizzCrop=false
     B:magicalcropsBronzeCrop=false
     B:magicalcropsCertusQuartzCrop=false
+    B:magicalcropsChickenCrop=false
+    B:magicalcropsCoalCrop=false
     B:magicalcropsCobaltCrop=false
     B:magicalcropsCopperCrop=false
+    B:magicalcropsCowCrop=false
+    B:magicalcropsCreeperCrop=false
     B:magicalcropsCropAir=false
     B:magicalcropsCropBlaze=false
     B:magicalcropsCropBooster=false
@@ -6699,36 +6625,61 @@ magicalcrops {
     B:magicalcropsCrucioFarmland=false
     B:magicalcropsCrucioFurnace=false
     B:magicalcropsCrucioFurnaceActive=false
+    B:magicalcropsDiamondCrop=false
+    B:magicalcropsDyeCrop=false
+    B:magicalcropsEarthCrop=false
     B:magicalcropsElectrumCrop=false
+    B:magicalcropsEmeraldCrop=false
     B:magicalcropsEnderiumCrop=false
+    B:magicalcropsEndermanCrop=false
     B:magicalcropsEssenceStone=true
+    B:magicalcropsExperienceCrop=false
+    B:magicalcropsFireCrop=false
     B:magicalcropsFluixCrop=false
+    B:magicalcropsGhastCrop=false
+    B:magicalcropsGlowstoneCrop=false
+    B:magicalcropsGoldCrop=false
     B:magicalcropsImperioFarmland=false
     B:magicalcropsImperioFurnace=false
     B:magicalcropsImperioFurnaceActive=false
     B:magicalcropsInvarCrop=false
+    B:magicalcropsIronCrop=false
+    B:magicalcropsLapisCrop=false
     B:magicalcropsLeadCrop=false
     B:magicalcropsLumiumCrop=false
     B:magicalcropsManasteelCrop=false
     B:magicalcropsManyullynCrop=false
+    B:magicalcropsMinicioCrop=false
     B:magicalcropsMinicioOre=true
     B:magicalcropsMinicioOreEnd=true
     B:magicalcropsMinicioOreNether=true
+    B:magicalcropsNatureCrop=false
+    B:magicalcropsNetherCrop=false
     B:magicalcropsNickelCrop=false
+    B:magicalcropsObsidianCrop=false
     B:magicalcropsPeridotCrop=false
+    B:magicalcropsPigCrop=false
     B:magicalcropsPlatinumCrop=false
+    B:magicalcropsQuartzCrop=false
+    B:magicalcropsRedstoneCrop=false
     B:magicalcropsRubberCrop=false
     B:magicalcropsRubyCrop=false
     B:magicalcropsSaltpeterCrop=false
     B:magicalcropsSapphireCrop=false
+    B:magicalcropsSheepCrop=false
     B:magicalcropsSignalumCrop=false
     B:magicalcropsSilverCrop=false
+    B:magicalcropsSkeletonCrop=false
+    B:magicalcropsSlimeCrop=false
+    B:magicalcropsSpiderCrop=false
     B:magicalcropsSteelCrop=false
     B:magicalcropsSulfurCrop=false
     B:magicalcropsTerrasteelCrop=false
     B:magicalcropsTinCrop=false
     B:magicalcropsUltimateFurnace=false
     B:magicalcropsUltimateFurnaceActive=false
+    B:magicalcropsWaterCrop=false
+    B:magicalcropsWitherCrop=false
     B:magicalcropsWitherProof=true
     B:magicalcropsWitherProofGlass=true
     B:magicalcropsYelloriteCrop=false
@@ -7424,6 +7375,7 @@ opencomputers {
     B:screen3=false
     B:serverRack=false
     B:switch=false
+    B:waypoint=false
 }
 
 
