--- a/config/Tails.cfg
+++ b/config/Tails.cfg
@@ -5,7 +5,7 @@ general {
     B:"Enable Library"=true
 
     #  [default: Local Players data. Delete to remove all customisation data. Do not try to edit manually]
-    S:"Local Player Data"=Local Players data. Delete to remove all customisation data. Do not try to edit manually
+    S:"Local Player Data"={"partInfos":[null,null,null]}
 }
 
 
