--- a/config/atg/biome_modifiers.cfg
+++ b/config/atg/biome_modifiers.cfg
@@ -973,6 +973,23 @@ BiomesOPlenty {
 }
 
 
+"BuildCraft|Silicon" {
+
+    "Desert Oil Field" {
+        B:AllowVillages=true
+        B:Enable=true
+        D:OccuranceMultiplier=1.0
+    }
+
+    "Ocean Oil Field" {
+        B:AllowVillages=true
+        B:Enable=true
+        D:OccuranceMultiplier=1.0
+    }
+
+}
+
+
 ChromatiCraft {
 
     "Ender Forest" {
