--- a/config/bettersleeping.cfg
+++ b/config/bettersleeping.cfg
@@ -26,7 +26,7 @@ config {
     B:enableSleepCounter=true
 
     # Enable message informing players about how many are asleep. [default: true]
-    B:enableSleepMessage=false
+    B:enableSleepMessage=true
 
     # Enable world tick simulation while asleep (Tile Entities only) [CAN CAUSE HIGH SERVER PERFORMANCE SPIKES] [default: false]
     B:enableSleepTicks=false
