--- a/config/fastcraft.ini
+++ b/config/fastcraft.ini
@@ -1,5 +1,5 @@
 ; FastCraft config
-; created May 10, 2015 8:57:35 AM
+; created May 10, 2015 11:14:34 PM
 ;---
 
 ; Settings purely affecting performance, but not gameplay.
