--- a/config/BetterFoliage/betterfoliage.cfg
+++ b/config/BetterFoliage/betterfoliage.cfg
@@ -9,16 +9,16 @@ algae {
     D:size=1.0
     I:population=48
     I:algaeBiomeList <
-        94
-        24
-        117
+        0
+        7
         10
         11
+        24
+        94
         95
         116
-        0
+        117
         154
-        7
      >
 }
 
@@ -120,21 +120,21 @@ coral {
     I:population=48
     I:chance=32
     I:coralBiomeList <
-        16
-        26
-        94
-        24
-        117
+        0
+        7
         10
         11
-        141
+        16
+        24
+        25
+        26
+        94
         95
         116
-        0
-        154
-        7
+        117
+        141
         143
-        25
+        154
      >
 }
 
@@ -180,7 +180,7 @@ lilypad {
 
 
 netherrack {
-    B:enabled=true
+    B:enabled=false
     I:distance=1000
     D:hOffset=0.2
     D:heightMin=0.6
@@ -198,110 +198,110 @@ reed {
     I:population=32
     B:shaderWind=true
     I:reedBiomeList <
-        42
-        43
+        0
+        1
+        4
+        6
+        7
+        9
+        14
+        15
         16
+        18
+        21
+        22
+        23
+        24
         27
         28
-        156
-        155
+        29
+        42
+        43
         44
         45
-        118
-        121
-        120
+        47
+        48
         49
         50
-        94
-        122
-        169
-        170
         54
         55
-        171
-        24
-        186
-        117
-        194
-        195
-        103
-        231
-        127
-        255
-        172
-        47
         56
-        173
-        178
         57
-        132
-        4
-        18
-        105
-        233
         59
         60
         61
         62
         64
-        21
-        149
-        23
-        151
-        22
-        95
         66
-        116
         68
-        193
-        98
         70
         71
         72
-        179
-        14
-        15
         74
-        0
-        154
         75
         76
-        1
         78
-        48
         79
         80
-        7
-        29
-        157
         81
         82
         83
-        142
-        107
-        9
         85
-        108
-        106
-        234
-        129
-        6
-        134
-        192
         87
         89
-        145
+        92
+        94
+        95
         96
+        98
+        100
+        103
+        105
+        106
+        107
+        108
+        116
+        117
+        118
+        120
+        121
+        122
+        127
+        129
+        132
+        134
+        142
+        145
+        148
+        149
+        151
+        154
+        155
+        156
+        157
         168
-        185
+        169
+        170
+        171
+        172
+        173
         175
         177
+        178
+        179
         182
         183
-        100
+        185
+        186
+        192
+        193
+        194
+        195
         228
-        92
-        148
+        231
+        233
+        234
+        255
      >
 }
 
