--- a/config/MagicalCrops/MagicalCropsMain.cfg
+++ b/config/MagicalCrops/MagicalCropsMain.cfg
@@ -28,19 +28,34 @@
 
 
 "misc options" {
-    B:"Accio, Crucio, Imperio & Zivicio Hoes give extra drops when harvesting Minicio Crops, default true"=true
-    B:"Accio, Crucio, Imperio & Zivicio Pickaxes give extra drops when mining Minicio Ores, default true"=true
+    B:"Accio, Crucio, Imperio & Zivicio Hoes give extra drops when harvesting Minicio Crops, default true"=false
+    B:"Accio, Crucio, Imperio & Zivicio Pickaxes give extra drops when mining Minicio Ores, default true"=false
+    B:"Full Zivicio armour gives you creatve flight, default true"=false
     I:"How many Essence ingots do you get when crafted, default 3, Max 64"=3
+    B:"Ultimate Diamond, Emerald and Ultimate Apple apples are active, default true"=false
     B:"You can use essence to craft enchanting books, default true"=false
+}
+
+
+"monster drop options" {
+    B:"Animals e.g. Pigs, Sheep and Chickens, drop Minicio essence when killed, default true"=false
+    B:"Can mobs drop essence on death (universal switch for all mobs), default true"=false
+    I:"Chance of animals dropping Minicio essence when killed in percent, default 10"=1
+    I:"Chance of monsters dropping Minicio essence when killed in percent, default 20"=2
+    B:"Ender dragon drops Zivicio essence when killed, default true"=false
+    I:"If they can, how many zivicio dusts should Ender Dragons drop when killed, default 4"=4
+    I:"If they can, how many zivicio dusts should the Wither Boss drop when killed, default 2"=2
+    B:"Monsters e.g. Zombies, Skeletons and Creepers, drop Minicio essence when killed, default true"=false
+    B:"Wither drops Zivicio essence when killed, default true"=false
 }
 
 
 "mutation options" {
     B:"1 Do crops mutate to gain magical seeds, default true"=true
-    I:"2 Mutation chance for accio based crops, e.g. Coal, default 25, max 100"=25
-    I:"3 Mutation chance for crucio based crops, e.g. redstone, default 25, max 100"=25
-    I:"4 Mutation chance for imperio based crops, e.g. gold, default 25, max 100"=25
-    I:"5 Mutation chance for zivicio based crops, e.g. diamond, default 25, max 100"=25
+    I:"2 Mutation chance for accio based crops, e.g. Coal, default 25, max 100"=5
+    I:"3 Mutation chance for crucio based crops, e.g. redstone, default 25, max 100"=4
+    I:"4 Mutation chance for imperio based crops, e.g. gold, default 25, max 100"=3
+    I:"5 Mutation chance for zivicio based crops, e.g. diamond, default 25, max 100"=2
 }
 
 
